objects/CalloutItem__c.object
<CustomObject>
    <fields>
        <fullName>CalloutBody__c</fullName>
        <label>Callout Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CalloutContext__c</fullName>
        <label>Callout Context</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CalloutMetadataId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Callout Metadata</label>
        <referenceTo>CalloutMetadata__c</referenceTo>
        <relationshipLabel>Callout Items</relationshipLabel>
        <relationshipName>CalloutItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HTTPAction__c</fullName>
        <description>The action of the callout.  Get / Post / Put / Delete</description>
        <label>HTTPAction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTPStatusCode__c</fullName>
        <label>HTTP Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HTTPStatus__c</fullName>
        <label>HTTP Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntegrationProcessingClass__c</fullName>
        <label>Integration Processing Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutboundDRBundleName__c</fullName>
        <label>Outbound DRBundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutboundHeaders__c</fullName>
        <label>Outbound Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PersistCalloutData__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Persist Callout Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResponseHeaders__c</fullName>
        <label>Response Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponseMessageRaw__c</fullName>
        <label>Response Message Raw</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponseMessage__c</fullName>
        <label>Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResultDRBundleName__c</fullName>
        <label>Result DRBundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>No Rows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System</label>
        <referenceTo>System__c</referenceTo>
        <relationshipLabel>Callout Items</relationshipLabel>
        <relationshipName>CalloutItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransformURLDRBundle__c</fullName>
        <label>TransformURL DRBundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URI__c</fullName>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Callout Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Callout Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Callout Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>